# wr-cl

./: .gitignore  LICENSE  README.md  build.py  build_config.py  config.json.template  generate_icons.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  tag-version.sh  wr-cl.spec
.github/workflows/: build.yml
resources/icons/: icon.icns
src/: __init__.py  __main__.py  cli.py  config.py  logger_config.py  processor.py  utils.py
tests/: conftest.py  test_cli.py  test_config.json  test_processor.py
